# ApaBasics

./: CMakeLists.txt  README.md  main.c
Basic_Algorithms/: Basic_Algorithms.c  Basic_Algorithms.h
Item/: item.c  item.h
OnLineConnectivity/: OnLineConnectivity.c  OnLineConnectivity.h
Recursive_Algorithms/: Cooley_Tuckey_Quick_Ftt.cpp  Cooley_Tuckey_Quick_Ftt.h
Recursive_Basic_Algorithms/: Recursive_Basic_Algorithms.c  Recursive_Basic_Algorithms.h
SignalProcessing/: spectral.c  spectral.h
